# CDiscord

./: CMakeLists.txt
include/: AsioHandler.h  Client.h  ThreadHandler.h
src/: AsioHandler.cpp  CMakeLists.txt  Client.cpp  ThreadHandler.cpp
test/: CMakeLists.txt  main.cpp
